@@ -6,6 +6,7 @@
  395318 give user feedback when filtering a large newsgroup (Kreao Kunjas)
  404347 indicate offline status more clearly (Samuli Karkkainen)
  371838 header pane not updated when a score matches on bytes or lines (Mike)
+ 370195 uulib/fptools.c assert issue - crash (Samuli Karkkainen)
 
 0.122 "Not Even Wrong"
  354779 pan no longer attempts to reconnect (Jason Auvenshine)
